--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^8.4.1",
-    "eslint-config-airbnb-base": "^15.0.0"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1"
   }
 }
