--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "pinboard-server",
   "version": "1.0.0",
+  "scripts": {
+    "build": "babel src -d build"
+  },
   "description": "Pinboard",
   "main": "index.js",
   "repository": "git@github.com:usmansbk/pinboard-server.git",
   "author": "Usman Suleiman <usmansbk@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
