--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,21 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    [
+      "module-resolver",
+      {
+        "root": ["./src"],
+        "alias": {
+          "~config": "./src/config",
+          "~graph-api": "./src/graphql",
+          "~utils": "./src/utils",
+          "~services": "./src/services",
+          "~db": "./src/db",
+          "~helpers": "./src/helpers",
+          "~locales": "./src/locales"
+        }
+      }
+    ]
+  ]
 }
