--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
-    "dotenv": "^10.0.0"
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "graphql": "^16.1.0"
   }
 }
