--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/runtime": "^7.16.3",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "bunyan": "^1.8.15",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^16.1.0"
