Setup sequelize with postgres

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 NODE_ENV=development
-APP_NAME=pinboard
+APP_NAME=apollo-server-template
+
+DB_USERNAME=apollo-server-express
+DB_NAME=apollo-server-express_development
