--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,4 @@
-require("babel-register");
-require("dotenv").config();
-
+require("@babel/register");
 const path = require("path");
 
 module.exports = {
