--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "babel src -d build --copy-files",
     "start": "node -r dotenv/config build",
-    "start:dev": "nodemon --exec babel-node -r dotenv/config src dotenv_config_path=./.env.development"
+    "start:dev": "nodemon --exec babel-node -r dotenv/config src"
   },
   "description": "Apollo GraphQL server template",
   "main": "index.js",
@@ -17,8 +17,8 @@
     "@babel/node": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@babel/register": "^7.16.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-register": "^6.26.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
