--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-datasource": "^3.3.0",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
     "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
