--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^16.1.0",
+    "nanoid": "^3.1.30",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.12.0-beta.2"
