--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "babel src -d build --copy-files",
     "start": "node -r dotenv/config build",
-    "start:dev": "nodemon --exec babel-node -r dotenv/config src"
+    "start:dev": "nodemon --exec babel-node -r dotenv/config src",
+    "test": "jest"
   },
   "description": "Apollo GraphQL server template",
   "main": "index.js",
@@ -22,6 +23,7 @@
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.4.4",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "sequelize-cli": "^6.3.0"
