--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/register": "^7.16.0",
+    "babel-jest": "^27.4.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
