--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "faker": "^5.5.3",
     "jest": "^27.4.4",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
