--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apollo-server-express": "^3.5.0",
     "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
+    "cls-hooked": "^4.2.2",
     "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
