--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "graphql": "^16.1.0",
     "graphql-iso-date": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.30",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
