--- a/babel.config.json
+++ b/babel.config.json
@@ -13,7 +13,7 @@
           "~services": "./src/services",
           "~db": "./src/db",
           "~helpers": "./src/helpers",
-          "~locales": "./src/locales"
+          "~i18n": "./src/i18n"
         }
       }
     ]
