--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "graphql": "^16.1.0",
     "graphql-iso-date": "^3.6.1",
+    "i18next": "^21.6.0",
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.30",
