--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql": "^16.1.0",
     "graphql-iso-date": "^3.6.1",
     "i18next": "^21.6.0",
+    "i18next-fs-backend": "^1.1.4",
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.30",
