--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.12.0-beta.2"
