--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sequelize-cli": "^6.3.0"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.43.0",
     "@babel/runtime": "^7.16.3",
     "@graphql-tools/load-files": "^6.5.2",
     "@graphql-tools/merge": "^8.2.1",
