--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "graphql-iso-date": "^3.6.1",
     "i18next": "^21.6.0",
     "i18next-fs-backend": "^1.1.4",
+    "i18next-http-middleware": "^3.1.4",
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.30",
