--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "*": ["src/*"],
       "~config/*": ["src/config/*"],
-      "~graph-api/*": ["src/graphql/*"],
+      "~graphql/*": ["src/graphql/*"],
       "~utils/*": ["src/utils/*"],
       "~services/*": ["src/services/*"],
       "~db/*": ["src/db/*"],
