--- a/package.json
+++ b/package.json
@@ -13,51 +13,51 @@
   "author": "Usman Suleiman <usmansbk@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/register": "^7.16.5",
-    "babel-jest": "^27.4.5",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/register": "^7.16.9",
+    "babel-jest": "^27.4.6",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "faker": "^5.5.3",
-    "jest": "^27.4.5",
+    "faker": "^6.6.6",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "sequelize-cli": "^6.3.0"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.43.0",
-    "@babel/runtime": "^7.16.3",
-    "@graphql-tools/load-files": "^6.5.2",
+    "@aws-sdk/client-ses": "^3.46.0",
+    "@babel/runtime": "^7.16.7",
+    "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/merge": "^8.2.1",
     "apollo-datasource": "^3.3.0",
-    "apollo-server-core": "^3.5.0",
-    "apollo-server-express": "^3.5.0",
+    "apollo-server-core": "^3.6.1",
+    "apollo-server-express": "^3.6.1",
     "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
     "cls-hooked": "^4.2.2",
     "dataloader": "^2.0.0",
     "dayjs": "^1.10.7",
-    "dotenv": "^10.0.0",
+    "dotenv": "^11.0.0",
     "email-templates": "^8.0.8",
-    "express": "^4.17.1",
-    "graphql": "^16.1.0",
+    "express": "^4.17.2",
+    "graphql": "^16.2.0",
     "graphql-iso-date": "^3.6.1",
-    "i18next": "^21.6.0",
+    "i18next": "^21.6.6",
     "i18next-fs-backend": "^1.1.4",
-    "i18next-http-middleware": "^3.1.4",
-    "ioredis": "^4.28.2",
+    "i18next-http-middleware": "^3.1.5",
+    "ioredis": "^4.28.3",
     "jsonwebtoken": "^8.5.1",
-    "nanoid": "^3.1.30",
+    "nanoid": "^3.1.31",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "sequelize": "^6.12.0-beta.3"
+    "sequelize": "^6.13.0"
   }
 }
