--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "faker": "^6.6.6",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
@@ -46,6 +45,7 @@
     "dotenv": "^11.0.0",
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
+    "faker": "5.5.3",
     "graphql": "^16.2.0",
     "graphql-iso-date": "^3.6.1",
     "i18next": "^21.6.6",
