--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,15 @@ NODE_ENV=development
 APP_NAME=apollo-server-express
 
 DB_USERNAME=apollo-server-express
-DB_PASSWORD=apollo-server-express
+DB_PASSWORD=postgres
 DB_NAME_DEV=apollo-server-express_development
 DB_NAME_TEST=apollo-server-express_test
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
 
 MAIL_FROM=sender@example.com
+
+JWT_SECRET_KEY=secret
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
