--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/register": "^7.16.9",
     "babel-jest": "^27.4.6",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
