--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.4",
     "faker": "5.5.3",
     "husky": ">=6",
     "jest": "^27.4.7",
