Set token issuer

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 APP_NAME=apollo-server-express
+HOST=http://localhost:3000
 
 DB_USERNAME=apollo-server-express
 DB_PASSWORD=postgres
