--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ DB_DIALECT=postgres
 
 MAIL_FROM=sender@example.com
 
-JWT_SECRET_KEY=secret
+JWT_PRIVATE_KEY=jwtRS256.key
+JWT_PUBLIC_KEY=jwtRS256.key.pub
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
