--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DB_NAME_TEST=apollo-server-express_test
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
 
+REDIS_URL=
+
 MAIL_FROM=sender@example.com
 
 JWT_PRIVATE_KEY=jwtRS256.key
