--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,7 @@
         "root": ["./src"],
         "alias": {
           "~config": "./src/config",
-          "~graphql": "./src/graphql",
+          "~api": "./src/api",
           "~utils": "./src/utils",
           "~services": "./src/services",
           "~db": "./src/db",
