prepare rate limiter

--- a/babel.config.json
+++ b/babel.config.json
@@ -9,6 +9,7 @@
         "alias": {
           "~config": "./src/config",
           "~api": "./src/api",
+          "~middlewares": "./src/middlwares",
           "~utils": "./src/utils",
           "~services": "./src/services",
           "~db": "./src/db",
