--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "*": ["src/*"],
       "~config/*": ["src/config/*"],
       "~api/*": ["src/api/*"],
+      "~middlewares/*": ["src/middlewares/*"],
       "~utils/*": ["src/utils/*"],
       "~services/*": ["src/services/*"],
       "~db/*": ["src/db/*"],
