--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "twilio": "^3.73.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
