--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ JWT_PUBLIC_KEY=jwtRS256.key.pub
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
+
+TEST_CLIENT_ID=playground
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+PHONE_NUMBER=
