--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-rate-limit": "^6.1.0",
+    "google-auth-library": "^7.11.0",
     "graphql": "^16.2.0",
     "graphql-iso-date": "^3.6.1",
     "i18next": "^21.6.6",
