Verify google tokens

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ TEST_CLIENT_ID=playground
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 PHONE_NUMBER=
+
+GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
