--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "ioredis": "^4.28.3",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.32",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "2",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
