--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ TWILIO_AUTH_TOKEN=
 PHONE_NUMBER=
 
 GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_ACCESS_TOKEN=
