--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "i18next-http-middleware": "^3.1.5",
     "ioredis": "^4.28.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nanoid": "^3.1.32",
     "node-fetch": "2",
     "nodemailer": "^6.7.2",
