--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "sequelize-cli": "^6.3.0"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.46.0",
     "@aws-sdk/credential-provider-node": "^3.46.0",
     "@babel/runtime": "^7.16.7",
     "@graphql-tools/load-files": "^6.5.3",
@@ -45,6 +44,7 @@
     "apollo-datasource": "^3.3.0",
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
+    "aws-sdk": "^2.1058.0",
     "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
     "cls-hooked": "^4.2.2",
@@ -63,6 +63,7 @@
     "ioredis": "^4.28.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nanoid": "^3.1.32",
     "node-fetch": "2",
     "nodemailer": "^6.7.2",
