--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nanoid": "^3.1.32",
     "node-fetch": "2",
     "nodemailer": "^6.7.2",
+    "numeral": "^2.0.6",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
