--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "i18next-http-middleware": "^3.1.5",
     "ioredis": "^4.28.3",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nanoid": "^3.1.32",
