--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
     "cls-hooked": "^4.2.2",
+    "connect-timeout": "^1.9.0",
     "dataloader": "^2.0.0",
     "dayjs": "^1.10.7",
     "dotenv": "^12.0.3",
