--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-transform-runtime": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
     "@babel/register": "^7.16.9",
+    "@faker-js/faker": "^6.0.0-alpha.3",
     "babel-jest": "^27.4.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
@@ -28,7 +29,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
-    "faker": "5.5.3",
     "husky": ">=6",
     "jest": "^27.4.7",
     "lint-staged": ">=10",
