--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
     "jest": "^27.4.7",
-    "lint-staged": ">=10",
+    "lint-staged": "^12.2.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "sequelize-cli": "^6.4.1"
@@ -43,10 +43,10 @@
     "@graphql-tools/merge": "^8.2.1",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/utils": "^8.6.1",
-    "apollo-datasource": "^3.3.0",
-    "apollo-server-core": "^3.6.1",
-    "apollo-server-express": "^3.6.1",
-    "aws-sdk": "^2.1058.0",
+    "apollo-datasource": "^3.3.1",
+    "apollo-server-core": "^3.6.2",
+    "apollo-server-express": "^3.6.2",
+    "aws-sdk": "^2.1059.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
@@ -54,7 +54,7 @@
     "connect-timeout": "^1.9.0",
     "dataloader": "^2.0.0",
     "dayjs": "^1.10.7",
-    "dotenv": "^14.1.0",
+    "dotenv": "^14.2.0",
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-rate-limit": "^6.1.0",
