--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,5 @@ GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
 
 FACEBOOK_APP_ID=
 FACEBOOK_APP_ACCESS_TOKEN=
+
+CLOUDFRONT_API_ENDPOINT=
