--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,22 @@ NODE_ENV=development
 APP_NAME=apollo-server-express
 HOST=http://localhost:3000
 
-DB_USERNAME=apollo-server-express
+DB_USERNAME=simple-server
 DB_PASSWORD=postgres
-DB_NAME_DEV=apollo-server-express_development
-DB_NAME_TEST=apollo-server-express_test
+DB_NAME_DEV=simple-server-dev
+DB_NAME_TEST=simple-server-test
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
 
 REDIS_URL=
+MAIL_FROM=example@mail.com
 
 JWT_PRIVATE_KEY=jwtRS256.key
 JWT_PUBLIC_KEY=jwtRS256.key.pub
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
+AWS_REGION=
 
 TEST_CLIENT_ID=playground
 
