--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.7",
+    "@babel/core": "^7.16.10",
     "@babel/node": "^7.16.8",
-    "@babel/plugin-transform-runtime": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/preset-env": "^7.16.10",
     "@babel/register": "^7.16.9",
     "@faker-js/faker": "^6.0.0-alpha.3",
     "babel-jest": "^27.4.6",
@@ -31,7 +31,7 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
     "jest": "^27.4.7",
-    "lint-staged": "^12.2.0",
+    "lint-staged": "^12.2.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "sequelize-cli": "^6.4.1"
@@ -46,7 +46,7 @@
     "apollo-datasource": "^3.3.1",
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
-    "aws-sdk": "^2.1059.0",
+    "aws-sdk": "^2.1060.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
@@ -76,7 +76,7 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "rate-limit-redis": "^2.1.0",
+    "rate-limit-redis": "2.1.0",
     "sequelize": "^6.13.0",
     "twilio": "^3.73.0"
   },
