--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
       "~utils/*": ["src/utils/*"],
       "~services/*": ["src/services/*"],
       "~db/*": ["src/db/*"],
-      "~helpers/*": ["src/helpers/*"]
+      "~helpers/*": ["src/helpers/*"],
+      "tests/*": ["tests/*"]
     }
   }
 }
