--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint-staged": "^12.2.2",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
+    "redis-mock": "^0.56.3",
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
