--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "rate-limit-redis": "2.1.0",
+    "rate-limit-redis": "^3.0.0",
     "sequelize": "^6.14.1",
     "twilio": "^3.73.1"
   },
