--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "babel src -d build --copy-files",
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
+    "createsu": "babel-node -r dotenv/config src/scripts/createSuperUser",
     "test": "cross-env NODE_ENV=test jest -i --testTimeout=60000",
     "prepare": "husky install"
   },
