--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ JWT_PUBLIC_KEY=jwtRS256.key.pub
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
+S3_BUCKET=
 
 TEST_CLIENT_ID=playground
 ADMIN_CLIENT_ID=admin
