--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.7",
     "@babel/node": "^7.16.8",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
-    "@babel/register": "^7.17.0",
+    "@babel/register": "^7.17.7",
     "@faker-js/faker": "^6.0.0-alpha.7",
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -33,37 +33,37 @@
     "husky": ">=6",
     "ioredis-mock": "^7.1.0",
     "jest": "^27.5.1",
-    "lint-staged": "^12.3.5",
+    "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1",
+    "prettier": "^2.6.0",
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
-    "@aws-sdk/credential-provider-node": "^3.53.0",
-    "@babel/runtime": "^7.17.2",
+    "@aws-sdk/credential-provider-node": "^3.54.1",
+    "@babel/runtime": "^7.17.7",
     "@graphql-tools/load-files": "^6.5.3",
-    "@graphql-tools/merge": "^8.2.3",
-    "@graphql-tools/schema": "^8.3.2",
-    "@graphql-tools/utils": "^8.6.2",
+    "@graphql-tools/merge": "^8.2.4",
+    "@graphql-tools/schema": "^8.3.3",
+    "@graphql-tools/utils": "^8.6.3",
     "apollo-datasource": "^3.3.1",
-    "apollo-server-core": "^3.6.3",
-    "apollo-server-express": "^3.6.3",
-    "aws-sdk": "^2.1087.0",
+    "apollo-server-core": "^3.6.4",
+    "apollo-server-express": "^3.6.4",
+    "aws-sdk": "^2.1095.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
     "cls-hooked": "^4.2.2",
     "connect-timeout": "^1.9.0",
     "dataloader": "^2.0.0",
-    "dayjs": "^1.10.8",
+    "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
-    "email-templates": "^8.0.9",
+    "email-templates": "^8.0.10",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
     "google-auth-library": "^7.14.0",
     "graphql": "^16.3.0",
     "graphql-iso-date": "^3.6.1",
-    "i18next": "^21.6.13",
+    "i18next": "^21.6.14",
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.0",
     "ioredis": "^4.28.5",
@@ -78,9 +78,9 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "rate-limit-redis": "^3.0.0",
+    "rate-limit-redis": "^3.0.1",
     "sequelize": "^6.17.0",
-    "twilio": "^3.75.0"
+    "twilio": "^3.75.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
