--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
-    "@faker-js/faker": "^6.0.0-alpha.7",
+    "@faker-js/faker": "^6.0.0",
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
