--- a/package.json
+++ b/package.json
@@ -25,30 +25,30 @@
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
-    "ioredis-mock": "^7.1.0",
+    "ioredis-mock": "^7.2.0",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
-    "@aws-sdk/credential-provider-node": "^3.54.1",
+    "@aws-sdk/credential-provider-node": "^3.56.0",
     "@babel/runtime": "^7.17.8",
     "@graphql-tools/load-files": "^6.5.3",
-    "@graphql-tools/merge": "^8.2.4",
-    "@graphql-tools/schema": "^8.3.3",
-    "@graphql-tools/utils": "^8.6.3",
+    "@graphql-tools/merge": "^8.2.6",
+    "@graphql-tools/schema": "^8.3.5",
+    "@graphql-tools/utils": "^8.6.5",
     "apollo-datasource": "^3.3.1",
-    "apollo-server-core": "^3.6.4",
-    "apollo-server-express": "^3.6.4",
-    "aws-sdk": "^2.1096.0",
+    "apollo-server-core": "^3.6.6",
+    "apollo-server-express": "^3.6.6",
+    "aws-sdk": "^2.1101.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
@@ -57,30 +57,30 @@
     "dataloader": "^2.0.0",
     "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
-    "email-templates": "^8.0.10",
+    "email-templates": "^9.0.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
-    "google-auth-library": "^7.14.0",
+    "google-auth-library": "^7.14.1",
     "graphql": "^16.3.0",
     "graphql-iso-date": "^3.6.1",
     "i18next": "^21.6.14",
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.0",
-    "ioredis": "^4.28.5",
+    "ioredis": "4.28.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nanoid": "^3.3.1",
     "node-fetch": "2",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.3",
     "numeral": "^2.0.6",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
     "rate-limit-redis": "^3.0.1",
     "sequelize": "^6.17.0",
-    "twilio": "^3.75.1"
+    "twilio": "^3.76.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
