--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,13 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"],
-      "~config/*": ["src/config/*"],
-      "~api/*": ["src/api/*"],
-      "~utils/*": ["src/utils/*"],
-      "~services/*": ["src/services/*"],
-      "~db/*": ["src/db/*"],
-      "~helpers/*": ["src/helpers/*"],
+      "~*": ["./src/*"],
       "tests/*": ["tests/*"]
     }
   }
