--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "google-auth-library": "^7.14.1",
     "graphql": "^16.3.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.16.0",
     "i18next": "^21.6.14",
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.0",
