--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,8 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 S3_BUCKET=
 
-TEST_CLIENT_ID=playground
-ADMIN_CLIENT_ID=admin
+CLIENT_ID=playground
+ADMIN_CLIENT_ID=
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
