fix relative cursor pagination

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "apollo-datasource": "^3.3.1",
     "apollo-server-core": "^3.6.6",
     "apollo-server-express": "^3.6.6",
+    "atob": "^2.1.2",
     "aws-sdk": "^2.1101.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
