--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "pug": "^3.0.2",
     "rate-limit-redis": "^3.0.1",
     "sequelize": "^6.17.0",
+    "sequelize-transparent-cache": "^2.3.0",
+    "sequelize-transparent-cache-ioredis": "^2.3.0",
     "twilio": "^3.76.0"
   },
   "lint-staged": {
