--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
     "createsu": "babel-node -r dotenv/config src/scripts/createSuperUser",
-    "test": "cross-env NODE_ENV=test jest -i --testTimeout=60000",
+    "test": "cross-env NODE_ENV=test mocha",
     "prepare": "husky install"
   },
   "description": "Apollo GraphQL server template",
@@ -22,7 +22,6 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
     "@faker-js/faker": "^6.1.1",
-    "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
@@ -32,8 +31,8 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
     "ioredis-mock": "^7.2.0",
-    "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "sequelize-cli": "^6.4.1"
