--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,7 @@
         "root": ["./"],
         "alias": {
           "^~(.+)": "./src/\\1",
-          "tests": "./tests"
+          "test": "./test"
         },
         "extensions": [".js"]
       }
