--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/register": "^7.17.7",
     "@faker-js/faker": "^6.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "chai": "^4.3.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
