--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "i18next": "^21.6.14",
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.0",
+    "inquirer": "^8.2.2",
     "ioredis": "4.28.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
