--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "express-rate-limit": "^6.3.0",
     "google-auth-library": "^7.14.1",
     "graphql": "^16.3.0",
+    "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.17.0",
     "i18next": "^21.6.14",
     "i18next-fs-backend": "^1.1.4",
