--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "connect-timeout": "^1.9.0",
     "dataloader": "^2.0.0",
     "dayjs": "^1.11.0",
+    "deepmerge": "^4.2.2",
     "dotenv": "^16.0.0",
     "email-templates": "^9.0.0",
     "express": "^4.17.3",
