--- a/package.json
+++ b/package.json
@@ -92,5 +92,9 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
+  },
+  "nodemonConfig": {
+    "ext": "js,graphql,env",
+    "watch": ".env"
   }
 }
