--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ NODE_ENV=development
 APP_NAME=sequelize-graphql-server
 HOST=http://localhost:3000
 
-DB_USERNAME=example-server
+DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME_DEV=example-db-dev
-DB_NAME_TEST=example-db-test
+DB_NAME_DEV=simple-server-dev
+DB_NAME_TEST=simple-server-test
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
 
