--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,13 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME_DEV=simple-server-dev
 DB_NAME_TEST=simple-server-test
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_DIALECT=postgres
 
+REDIS_PORT=6379
+REDIS_HOST=cache
 REDIS_URL=
+
 MAIL_FROM=example@mail.com
 
 JWT_PRIVATE_KEY=jwtRS256.key
