--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DB_NAME_DEV=simple-server-dev
 DB_NAME_TEST=simple-server-test
 DB_HOST=db
 DB_DIALECT=postgres
+use_env_variable=
 
 REDIS_PORT=6379
 REDIS_HOST=cache
@@ -23,8 +24,8 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 S3_BUCKET=
 
-CLIENT_ID=playground
-ADMIN_CLIENT_ID=
+WEB_CLIENT_ID=playground
+ADMIN_CLIENT_ID=playground
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
