--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bunyan": "^1.8.15",
     "cls-hooked": "^4.2.2",
     "connect-timeout": "^1.9.0",
+    "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "dayjs": "^1.11.0",
     "deepmerge": "^4.2.2",
