--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@graphql-tools/merge": "^8.2.7",
     "@graphql-tools/schema": "^8.3.7",
     "@graphql-tools/utils": "^8.6.6",
+    "@sentry/node": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
+    "analytics-node": "^6.0.0",
     "apollo-datasource": "^3.3.1",
     "apollo-server-core": "^3.6.7",
     "apollo-server-express": "^3.6.7",
