--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
     "createsu": "babel-node -r dotenv/config src/scripts/createSuperUser",
-    "clientId": "babel-node src/scripts/generateClientId",
+    "clientid": "babel-node src/scripts/generateClientId",
     "test": "cross-env NODE_ENV=test jest -i --testTimeout=100000",
     "prepare": "husky install"
   },
