--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "createsu": "babel-node -r dotenv/config src/scripts/createSuperUser",
     "clientid": "babel-node src/scripts/generateClientId",
     "test": "cross-env NODE_ENV=test jest -i",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "seed": "npx sequelize-cli db:seed:all",
+    "undo:seed": "npx sequelize-cli db:seed:undo:all"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
@@ -21,7 +23,6 @@
     "@babel/node": "^7.17.10",
     "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
-    "@babel/register": "^7.17.7",
     "babel-jest": "^28.0.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
@@ -40,6 +41,7 @@
     "weak-napi": "^2.0.2"
   },
   "dependencies": {
+    "@babel/register": "^7.17.7",
     "@aws-sdk/credential-provider-node": "^3.82.0",
     "@babel/runtime": "^7.17.9",
     "@faker-js/faker": "^6.3.1",
