--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 APP_NAME=sequelize-graphql-server
 HOST=http://localhost:3000
+SECURE_KEY=newkey,oldkey
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
@@ -15,9 +16,6 @@ REDIS_HOST=cache
 REDIS_URL=
 
 MAIL_FROM=example@mail.com
-
-JWT_PRIVATE_KEY=jwtRS256.key
-JWT_PUBLIC_KEY=jwtRS256.key.pub
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
