--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
 APP_NAME=sequelize-graphql-server
 HOST=http://localhost:3000
-SECURE_KEY=newkey,oldkey
+SECURE_KEY=key,key
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
