--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_NAME_DEV=simple-server-dev
 DB_NAME_TEST=simple-server-test
 DB_HOST=db
 DB_DIALECT=postgres
-use_env_variable=
+DATABASE_URL=
 
 REDIS_PORT=6379
 REDIS_HOST=cache
@@ -27,7 +27,7 @@ ADMIN_CLIENT_ID=playground
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
-PHONE_NUMBER=
+TWILIO_PHONE_NUMBER=
 
 GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
 
