--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 NODE_ENV=development
 APP_NAME=sequelize-graphql-server
 HOST=http://localhost:3000
-SECURE_KEY=key,key
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
@@ -29,6 +28,8 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
+JWT_PRIVATE_KEY=jwtRS256.key
+JWT_PUBLIC_KEY=jwtRS256.key.pub
 GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
 
 FACEBOOK_APP_ID=
