--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.17.10",
-    "@babel/node": "^7.17.10",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/node": "^7.18.5",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
-    "babel-jest": "^28.0.3",
+    "babel-jest": "^28.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.14.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "husky": ">=6",
     "ioredis-mock": "^7.4.0",
-    "jest": "^28.0.3",
+    "jest": "^28.1.1",
     "lint-staged": "^12.4.1",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
@@ -42,21 +42,21 @@
     "weak-napi": "^2.0.2"
   },
   "dependencies": {
-    "@aws-sdk/credential-provider-node": "^3.82.0",
-    "@babel/runtime": "^7.17.9",
+    "@aws-sdk/credential-provider-node": "^3.105.0",
+    "@babel/runtime": "^7.18.3",
     "@faker-js/faker": "^6.3.1",
-    "@graphql-tools/load-files": "^6.5.3",
-    "@graphql-tools/merge": "^8.2.10",
-    "@graphql-tools/schema": "^8.3.10",
-    "@graphql-tools/utils": "^8.6.9",
+    "@graphql-tools/load-files": "^6.5.4",
+    "@graphql-tools/merge": "^8.2.14",
+    "@graphql-tools/schema": "^8.3.14",
+    "@graphql-tools/utils": "^8.6.13",
     "@sentry/node": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "analytics-node": "^6.0.0",
     "apollo-datasource": "^3.3.1",
-    "apollo-server-core": "^3.6.7",
-    "apollo-server-express": "^3.6.7",
+    "apollo-server-core": "^3.8.2",
+    "apollo-server-express": "^3.8.2",
     "atob": "^2.1.2",
-    "aws-sdk": "^2.1128.0",
+    "aws-sdk": "^2.1152.0",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.15",
@@ -64,24 +64,24 @@
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dataloader": "^2.1.0",
-    "dayjs": "^1.11.1",
+    "dayjs": "^1.11.3",
     "deepmerge": "^4.2.2",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "email-templates": "^9.0.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "google-auth-library": "^8.0.2",
-    "graphql": "^16.4.0",
+    "graphql": "^16.5.0",
     "graphql-fields-list": "^2.2.4",
     "graphql-scalars": "^1.17.0",
-    "i18next": "^21.6.16",
+    "i18next": "^21.8.9",
     "i18next-fs-backend": "^1.1.4",
-    "i18next-http-middleware": "^3.2.0",
+    "i18next-http-middleware": "^3.2.1",
     "inquirer": "^8.2.4",
     "ioredis": "4.28.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "nanoid": "^3.3.4",
     "node-fetch": "2.6.7",
@@ -92,8 +92,8 @@
     "pug": "^3.0.2",
     "rate-limit-redis": "^3.0.1",
     "retry": "^0.13.1",
-    "sequelize": "^6.19.0",
-    "twilio": "^3.77.0"
+    "sequelize": "^6.20.1",
+    "twilio": "^3.77.2"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
