--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
-    "husky": ">=6",
-    "ioredis-mock": "^7.4.0",
+    "husky": "^8.0.1",
+    "ioredis-mock": "^8.2.2",
     "jest": "^28.1.1",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^13.0.1",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "sequelize-cli": "^6.4.1",
@@ -44,13 +44,13 @@
   "dependencies": {
     "@aws-sdk/credential-provider-node": "^3.105.0",
     "@babel/runtime": "^7.18.3",
-    "@faker-js/faker": "^6.3.1",
+    "@faker-js/faker": "^7.2.0",
     "@graphql-tools/load-files": "^6.5.4",
     "@graphql-tools/merge": "^8.2.14",
     "@graphql-tools/schema": "^8.3.14",
     "@graphql-tools/utils": "^8.6.13",
-    "@sentry/node": "^6.19.7",
-    "@sentry/tracing": "^6.19.7",
+    "@sentry/node": "^7.1.1",
+    "@sentry/tracing": "^7.1.1",
     "analytics-node": "^6.0.0",
     "apollo-datasource": "^3.3.1",
     "apollo-server-core": "^3.8.2",
@@ -78,11 +78,11 @@
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.1",
     "inquirer": "^8.2.4",
-    "ioredis": "4.28.5",
+    "ioredis": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0",
+    "multer-s3": "^3.0.1",
     "nanoid": "^3.3.4",
     "node-fetch": "2.6.7",
     "nodemailer": "^6.7.5",
