--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 APP_NAME=sequelize-graphql-server
 HOST=http://localhost:3000
+PORT=4000
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
