--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,8 @@
         "root": ["./"],
         "alias": {
           "^~(.+)": "./src/\\1",
-          "tests": "./tests"
+          "tests": "./tests",
+          "locales": "./locales"
         },
         "extensions": [".js", ".json"]
       }
