--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 NODE_ENV=development
-APP_NAME=sequelize-graphql-server
+APP_NAME=auth-microservice
 HOST=http://localhost:4000
 CLIENT_HOST=http://localhost:3000
 PORT=4000
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME_DEV=simple-server-dev
-DB_NAME_TEST=simple-server-test
+DB_NAME=user-pool
+DB_NAME_TEST=user-pool-test
 DB_HOST=db
 DB_DIALECT=postgres
 DATABASE_URL=
