--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     container_name: auth-server
     image: auth-server
     restart: always
-    build: ./
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
     env_file: .env
     depends_on:
       - db
