--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,12 @@
 # syntax=docker/dockerfile:1
 
-FROM node:16-alpine AS build
-
-RUN apk add --no-cache python3 g++ make
+FROM node:16-alpine
+ENV NODE_ENV=development
 
 WORKDIR /app
+
+# Only for Mac M1 chips
+RUN apk add --no-cache python3 g++ make
 
 COPY package.json yarn.lock ./
 
