--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM node:16-alpine
+FROM node:16-alpine AS build
 ENV NODE_ENV=production
 
 WORKDIR /app
@@ -10,8 +10,8 @@ RUN apk add --no-cache python3 g++ make
 
 COPY package.json yarn.lock ./
 
-RUN yarn install
+RUN yarn
 
 COPY . .
 
-CMD yarn start
+CMD yarn start 
