--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - 4000:4000
     volumes:
-      - ./:/app
+      - ./:/usr/src/app
 
   db:
     container_name: postgresql_db
