build prod docker

--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -1,19 +1,22 @@
 # syntax=docker/dockerfile:1
 
-FROM node:16 AS build
+FROM node:16 AS builder
 ENV NODE_ENV=development
 WORKDIR /app
 COPY package*.json yarn.lock ./
 RUN yarn install
 COPY . .
-CMD yarn build
+RUN yarn build
 
 FROM node:16
 ENV NODE_ENV=production
 WORKDIR /usr/src/app
 COPY package*.json yarn.lock ./
 RUN yarn install
-COPY --from=build /app/build ./build
-# copy emails, locales, certs, .sequelize, & .env
+COPY --from=builder /app/build ./build
+COPY .sequelizerc .env ./
+COPY ./emails ./emails
+COPY ./locales ./locales
+COPY ./certs ./certs
 EXPOSE 4000
 RUN yarn start 
