--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "build": "yarn clean && yarn transpile",
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
-    "createsu": "babel-node -r dotenv/config src/scripts/createSuperUser",
-    "createapp": "babel-node -r dotenv/config src/scripts/createApplication",
-    "listapp": "babel-node -r dotenv/config src/scripts/listApplications",
+    "createsu": "node -r dotenv/config build/scripts/createSuperUser",
+    "createapp": "node -r dotenv/config build/scripts/createApplication",
+    "listapp": "node -r dotenv/config build/scripts/listApplications",
     "test": "cross-env NODE_ENV=test jest -i",
     "prepare": "husky install",
     "seed": "npx sequelize-cli db:seed:all",
