--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_NAME=user-pool
 DB_NAME_TEST=user-pool-test
 DB_HOST=db
 DB_DIALECT=postgres
+DB_PORT=5432
 DATABASE_URL=
 
 REDIS_PORT=6379
@@ -28,8 +29,8 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
-JWT_PRIVATE_KEY=jwtRS256.key
-JWT_PUBLIC_KEY=jwtRS256.key.pub
+JWT_PRIVATE_KEY=certs/jwtRS256.key
+JWT_PUBLIC_KEY=certs/jwtRS256.key.pub
 GOOGLE_APPLICATION_CREDENTIALS=google_client_secret.json
 
 FACEBOOK_APP_ID=
