--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "createsu": "node -r dotenv/config build/scripts/createSuperUser",
     "createapp": "node -r dotenv/config build/scripts/createApplication",
     "listapp": "node -r dotenv/config build/scripts/listApplications",
-    "test": "cross-env NODE_ENV=test jest -i",
+    "createsu:dev": "npx babel-node -r dotenv/config src/scripts/createSuperUser",
+    "createapp:dev": "npx babel-node -r dotenv/config src/scripts/createApplication",
+    "listapp:dev": "npx babel-node -r dotenv/config src/scripts/listApplications",
+    "test": "cross-env NODE_ENV=test jest -i --detectOpenHandles --forceExit",
     "prepare": "husky install",
     "seed": "npx sequelize-cli db:seed:all",
     "undo:seed": "npx sequelize-cli db:seed:undo:all",
     "clean": "npx rimraf build",
-    "transpile": "babel src -d build --copy-files"
+    "transpile": "babel src -d build --copy-files",
+    "docker:build:dev": "docker build . --tag usmansbk/auth-server -f docker/Dockerfile",
+    "docker:build:prod": "docker build . --tag usmansbk/auth-server:prod -f docker/Dockerfile.production",
+    "docker:start": "docker compose up",
+    "docker:push": "docker push usmansbk/auth-server"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
