--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,13 @@ jobs:
   build_and_test:
     docker:
       - image: cimg/node:16.15.1
+      - image: cimg/redis:6.2.6
       - image: cimg/postgres:14.0
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: user_pool_test
-      - image: redis:latest
     steps:
       - checkout
-      - run:
-          name: Run test and build
-          command: yarn test
+      - run: yarn install
+      - run: yarn test
