--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1
+
 jobs:
   build_and_test:
     docker:
@@ -9,6 +10,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: user_pool_test
+    working_directory: ~/repo
     steps:
       - checkout
       - run: yarn install
