--- a/.env.test
+++ b/.env.test
@@ -1,19 +1,18 @@
-APP_NAME=auth-microservice
+APP_NAME=simple-server
 HOST=http://localhost:4000
 CLIENT_HOST=http://localhost:3000
 PORT=4000
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME=user-pool
-DB_NAME_TEST=user-pool-test
-DB_HOST=db
+DB_NAME=user_pool_test
+DB_HOST=localhost
 DB_DIALECT=postgres
 DB_PORT=5432
 DATABASE_URL=
 
 REDIS_PORT=6379
-REDIS_HOST=cache
+REDIS_HOST=localhost
 REDIS_URL=
 
 MAIL_FROM=example@mail.com
