--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "build": "yarn clean && yarn transpile",
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
+    "test": "DOTENV_CONFIG_PATH=/.env.test jest -i --detectOpenHandles --forceExit",
     "createsu": "node -r dotenv/config build/scripts/createSuperUser",
     "createapp": "node -r dotenv/config build/scripts/createApplication",
     "listapp": "node -r dotenv/config build/scripts/listApplications",
     "createsu:dev": "babel-node -r dotenv/config src/scripts/createSuperUser",
     "createapp:dev": "babel-node -r dotenv/config src/scripts/createApplication",
     "listapp:dev": "babel-node -r dotenv/config src/scripts/listApplications",
-    "test": "jest -i --detectOpenHandles --forceExit",
     "prepare": "husky install",
     "createdb": "npx sequelize db:create",
     "seed": "sequelize-cli db:seed:all",
