--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "clean": "rimraf build",
     "transpile": "babel src -d build --copy-files",
     "docker:build:dev": "docker build . --tag usmansbk/auth-server -f docker/Dockerfile",
-    "docker:build:prod": "docker build . --tag usmansbk/auth-server:prod -f docker/Dockerfile.production",
+    "docker:build:prod": "docker build . --tag usmansbk/auth-server:latest -f docker/Dockerfile.production",
     "docker:start": "docker compose up",
     "docker:push": "docker push usmansbk/auth-server",
     "docker:cli": "docker exec -it auth-server sh",
-    "docker:test": "docker compose run api yarn test"
+    "docker:test": "docker compose run --rm api yarn test"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
