--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "undo:seed": "sequelize-cli db:seed:undo:all",
     "clean": "rimraf build",
     "transpile": "babel src -d build --copy-files",
-    "docker:build:dev": "docker build . --tag usmansbk/auth-server -f docker/Dockerfile",
-    "docker:build:prod": "docker build . --tag usmansbk/auth-server:latest -f docker/Dockerfile.production",
+    "docker:build:dev": "docker build . --tag usmansbk/auth-server --target dev",
+    "docker:build:prod": "docker build . --tag usmansbk/auth-server:prod --target prod",
     "docker:start": "docker compose up",
     "docker:push": "docker push usmansbk/auth-server",
     "docker:cli": "docker exec -it auth-server sh",
